Fix scroll position jumping when images load
Messages with images or media were causing the scroll position to jump
around when they loaded, because rendering them changed the height of their
elements from 0 to full-height sometime after they were inserted into
the DOM.

Now when rendering attachments, we wait for them to load so they can
render at full height immediately, then warn our parent message list
before and after a potential height change, so the scroll position can
be saved and reset.

// FREEBIE

--- a/stylesheets/_global.scss
+++ b/stylesheets/_global.scss
@@ -398,13 +398,13 @@ $avatar-size: 44px;
   position: relative;
   &::before {
     display: block;
-    margin: $header-height auto;
+    margin: 0px auto;
     content: " ";
-    height: $header-height;
-    width: $header-height;
-    border-radius: 2 * $header-height;
+    height: $loading-height;
+    width: $loading-height;
+    border-radius: 2 * $loading-height;
     border: solid 3px;
-    border-color: $blue_l $blue_l $grey_l $grey_l;
+    border-color: $blue_l $blue_l $grey_l $grey_l !important;
     animation: rotate 1s linear infinite;
   }
 
