--- a/stylesheets/_variables.scss
+++ b/stylesheets/_variables.scss
@@ -31,3 +31,4 @@ $header-color: $blue;
 $bubble-border-radius: 20px;
 
 $unread-badge-size: 21px;
+$loading-height: 16px;
